--- a/_layouts/lufix.html
+++ b/_layouts/lufix.html
@@ -4,4 +4,9 @@ layout: default
 
 {{ content }}
 
-<script src="/assets/js/theme.js"></script>
+<!-- Mathjax Support -->
+<script
+  type="text/javascript"
+  async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"
+></script>
