ADD all excercises

--- a/_layouts/lufix.html
+++ b/_layouts/lufix.html
@@ -4,6 +4,8 @@ layout: default
 
 {{ content }}
 
+<script src="{{site.baseurl}}/assets/js/theme.js"></script>
+
 <!-- Mathjax Support -->
 <script
   type="text/javascript"
