--- a/_sass/color_schemes/lufix-light.scss
+++ b/_sass/color_schemes/lufix-light.scss
@@ -1,17 +1,25 @@
-$body-background-color: $grey-lt-300;
-$sidebar-color: $grey-lt-300;
-$border-color: $grey-lt-200;
+$body-background-color: $white;
+$sidebar-color: $grey-lt-200;
+$border-color: $grey-lt-300;
 
 $body-text-color: $grey-dk-300;
-$body-heading-color: $grey-dk-000;
-$nav-child-link-color: $grey-lt-000;
+$body-heading-color: hsl(188, 40%, 20%);
+$nav-child-link-color: hsl(204, 2%, 30%);
 $search-result-preview-color: $grey-lt-000;
 
-$link-color: $blue-000;
-$btn-primary-color: $blue-200;
+$link-color: #00afcb;
+$btn-primary-color: #d4002d;
 $base-button-color: $grey-dk-250;
 
-$code-background-color: $grey-dk-250;
+$code-background-color: $grey-lt-200;
 $search-background-color: $grey-dk-250;
 $table-background-color: $grey-dk-250;
 $feedback-color: darken($sidebar-color, 3%);
+
+#search-input {
+  color: $body-text-color;
+}
+
+.site-title.lh-tight {
+  color: $link-color;
+}
